<resources>
    <string name="app_name">KeepSafe</string>
    <string name="choose_pin_string">Please choose a PIN</string>
    <string name="confirm_pin_string">Re-Enter the PIN to confirm</string>
    <string name="radio_text_bank">Bank</string>
    <string name="radio_text_email">e-Mail</string>
    <string name="radio_text_other">other</string>
    <string name="text_password">Enter Password</string>
    <string name="text_tran_password">Enter Transaction Password</string>
    <string name="accessibility_service_label">KeepSafe</string>
    <string name="accessibility_service_description">Allows app to monitor your password leakage. If this service is on you will only be able to paste your copied password in a Password field and that to only once.</string>
</resources>
