<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:id="@+id/et_item_name"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@+id/app_bar"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:hint="Account name"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_item_name"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/radio_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_text_bank"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/radio_text_email"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/radio_text_other"
            android:textSize="16sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/text_password" />

    <EditText
        android:id="@+id/et_tran_prassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/text_tran_password"
        android:visibility="gone" />


</RelativeLayout>